# FFmpegSample

app/: build.gradle
app/src/androidTest/java/com/example/lamedemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/lamedemo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/lamedemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lame/: CMakeLists.txt  build.gradle
lame/src/androidTest/java/com/example/lame/: ExampleInstrumentedTest.java
lame/src/main/: AndroidManifest.xml
lame/src/main/cpp/: gitencoder.cpp  native_bridge.cpp
lame/src/main/cpp/include/libavutil/: ffversion.h
lame/src/main/java/com/example/lame/: GifEncoder.java  NativeStaticBridge.java
lame/src/test/java/com/example/lame/: ExampleUnitTest.java
